# create-sparc

./: README.md  pyproject.toml
create_sparc_py/: __init__.py  __main__.py
create_sparc_py/cli/: __init__.py  parser_factory.py
create_sparc_py/cli/commands/: __init__.py  add_command.py  aigi_command.py  configure_mcp_command.py  help_command.py  help_markdown.py  init_command.py  minimal_command.py  registry_command.py  wizard_command.py
create_sparc_py/cli/commands/help/: add.md  aigi.md  configure-mcp.md  init.md  minimal.md  registry.md  wizard.md
create_sparc_py/core/: __init__.py  config_manager.py  mcp_security.py  mcp_validation.py  mcp_wizard.py  mcp_wizard_workflow.py  project_generator.py  registry_client.py  symlink_manager.py  template_manager.py
create_sparc_py/templates/default/: template.json
create_sparc_py/templates/default/files/: README.md  main.py  requirements.txt  setup.py
create_sparc_py/templates/minimal_roo/: .roomodes  README.md  template.json
create_sparc_py/templates/minimal_roo/.roo/: README.md  mcp.json
create_sparc_py/templates/minimal_roo/.roo/rules-code/: code_guidelines.md
create_sparc_py/templates/sparc/: template.json
create_sparc_py/templates/sparc/files/: README.md  main.py  requirements.txt  setup.py
create_sparc_py/utils/: __init__.py  error_handler.py  logger.py
docs/: missing_functionality.md  prd.md  tdd.md  tracker.md
node_version/tests/: __init__.py
node_version/tests/unit/: __init__.py
node_version/tests/unit/utils/: __init__.py  test_error_handler.py  test_fs_utils.py  test_logger.py  test_path_utils.py
test-project/: .roomodes  README.md
test-project/.roo/: README.md
test-project/.roo/rules/: general_guidelines.md
test-project/.roo/rules-code/: code_guidelines.md
tests/: __init__.py
tests/integration/: test_cli_integration.py
tests/unit/: test_cli.py
tests/unit/core/: __init__.py  test_config_manager.py  test_mcp_wizard.py  test_project_generator.py  test_registry_client.py  test_symlink_manager.py  test_template_manager.py
tests/unit/utils/: test_error_handler.py  test_fs_utils.py  test_logger.py  test_path_utils.py
(+8 files in other folders)
