[tool.poetry]
name = "create-sparc-py"
version = "0.1.0"
description = "Python port of create-sparc for scaffolding Python projects with SPARC methodology"
authors = ["Simon Frank <simonpfrankl@hotmail.com>", "Reuven Cohen (original create-sparc author) <reuven@example.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/simonpfrank/create-sparc-py"
repository = "https://github.com/simonpfrank/create-sparc-py"
keywords = ["sparc", "scaffold", "generator", "project", "template", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "create_sparc_py" }
]

[tool.poetry.dependencies]
python = "^3.12"
colorama = "^0.4.6"
jinja2 = "^3.1.2"
pyyaml = "^6.0.1"
inquirer = "^3.1.3"
rich = "^13.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.1"
sphinx = "^7.2.5"
sphinx-rtd-theme = "^1.3.0"
typer = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
create-sparc-py = "create_sparc_py.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"

[tool.isort]
profile = "black"
line_length = 119

[tool.black]
line-length = 119
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Attribution comment
# This project is a Python port of the original create-sparc Node.js tool 
# created by Reuven Cohen (https://github.com/ruvnet).
# Original repository: https://github.com/ruvnet/rUv-dev 